Updated copyright notice

--- a/build.xml
+++ b/build.xml
@@ -4,7 +4,7 @@
 
    InnoMedia Page Manager build file
 
-   Copyright (C) 2014 Innomatic Company All rights reserved.
+   Copyright (C) 2014 Innoteam Srl All rights reserved.
 
   =======================================================================
 -->
